--- a/index.html
+++ b/index.html
@@ -8,13 +8,9 @@
   </head>
 
   <body>
-    <div id="root"></div>
-    <!-- <script>
-      const root = document.getElementById("root");
-      const header = document.createElement("h1");
-      header.innerHTML = "hello worlds from javacript";
-      root.appendChild(header);
-    </script> -->
+    <div id="root">
+      <h1>hello</h1>
+    </div>
     <script type="module" src="./App.js"></script>
   </body>
 </html>
